# LuxCoreRenderUSD

./: .gitignore  CMakeLists.txt  README.md  out  readme.md
pxr/imaging/plugin/hdLuxCore/: CMakeLists.txt  camera.cpp  camera.h  instancer.cpp  instancer.h  light.cpp  light.h  mesh.cpp  mesh.h  pch.h  plugInfo.json  renderBuffer.cpp  renderBuffer.h  renderDelegate.cpp  renderDelegate.h  renderParam.h  renderPass.cpp  renderPass.h  renderPass.orig.cpp  renderer.cpp  renderer.h  rendererPlugin.cpp  rendererPlugin.h  sampler.cpp  sampler.h
script/: build_linux.sh  build_windows.bat  centos7_preconfig.sh  test.bat  test.sh
test/asset/: gen_stocta_w_offset_backdrop.py  gen_triangle.py  gen_triangle_w_backdrop.py  gen_triangle_w_offset_backdrop.py  gen_triangle_w_offset_backdrop_w_camera.py  gen_triangle_w_offset_backdrop_w_camera_w_light.py  geo_GridSphereLightCam.004.usd_scene.usda  stocta_w_offset_backdrop.usda  test.usda  test_multiple_meshes.usda  test_sphere_light.usda  tetrahedron.usda  tos.usda  tosc.usda  toscl.usda  triangle.usda  triangle_w_backdrop.usda  triangle_w_offset_backdrop_w_camera2.usda  triangle_w_offset_backdrop_with_camera.usda
test/asset/PointInstancedMedCity/: LICENSE.txt  PointInstancedMedCity.usd
